Apply static code analysis
PNDA-4788